<resources>
    <string name="app_name">GithubUser</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="number">0</string>
    <string name="name">Name</string>
    <string name="empty">Not Found</string>
    <string name="back_button">back_button</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="splash">Splash</string>
</resources>